Refactoring and applying category filter

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Recipes</title>
-		<link rel="stylesheet" href="./foundation.css" />
-		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="./css/foundation.css" />
+		<link rel="stylesheet" href="./css/index.css" />
 	</head>
 	<body>
 	
@@ -60,7 +60,8 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="http://cdn.ractivejs.org/latest/ractive.min.js"></script>
-	<script src="./index.js"></script>
+	<script src="./js/lodash.core.min.js"></script>
+	<script src="./js/index.js"></script>
 	</body>
 </html>
 
